[project]
name = "easy-bitrix"
version = "0.1.0"
description = "Python Library with easy API for Bitrix24 REST"
authors = [
    {name = "Alex Pavlov",email = "yukiu217@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
