[project]
name = "easy-bitrix"
version = "0.1.0"
description = "Python Library with easy API for Bitrix24 REST"
authors = [
    {name = "Alex Pavlov",email = "yukiu217@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sumaro2101/easy-bitrix"


[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"